--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,13 +5,13 @@ services:
       args:
         - DEV=true
     ports:
-      - "5000:5000"
+      - "8000:8000"
     volumes:
       - ./app:/app
     command: >
       sh -c "python manage.py wait_for_db &&
         python manage.py migrate &&
-        python manage.py runserver 0.0.0.0:5000"
+        python manage.py runserver --nostatic 0.0.0.0:8000"
     environment:
       - DB_HOST=db
       - DB_NAME=moneydb
